--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --header-height: 3rem;
     --nav-width: 68px;
-    --first-color: #00457e;
+    --first-color: #004680;
     --first-color-light: #AFA5D9;
     --white-color: #F7F6FB;
     --body-font: 'Nunito', sans-serif;
@@ -28,6 +28,10 @@ body {
 
 a {
     text-decoration: none
+}
+
+.bayangan {
+    box-shadow: 0 0 2px rgba(0,0,0,0.4);
 }
 
 .header {
@@ -181,3 +185,13 @@ a {
     }
 }
 
+.gradient-custom {
+    /* fallback for old browsers */
+    background: #6a11cb;
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
+    }
