--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ a {
     box-shadow: 0 0 2px rgba(0,0,0,0.4);
 }
 
+table td, table td * {
+    vertical-align: top;
+}
+
 .header {
     width: 100%;
     height: var(--header-height);
