--- a/style.css
+++ b/style.css
@@ -31,10 +31,11 @@ a {
 }
 
 .bayangan {
-    box-shadow: 0 0 2px rgba(0,0,0,0.4);
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.4);
 }
 
-table td, table td * {
+table td,
+table td * {
     vertical-align: top;
 }
 
@@ -192,10 +193,11 @@ table td, table td * {
 .gradient-custom {
     /* fallback for old browsers */
     background: #6a11cb;
-    
+
     /* Chrome 10-25, Safari 5.1-6 */
     background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1));
-    
+
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 1))
-    }
+}
+
